# BBCLI

./: .gitignore  MAINTAINERS  Makefile  README.md  configs.yaml  install.sh  main.py  pyproject.toml
app/: certificate.py  cli.py  server.py  services.py  utils.py
tests/: test_cli.py  test_services.py
